﻿GNomEx Release Notes

5.0.8.2 (Jan 3, 2011)
----------------------
- Worked around Mac Copy/Paste problem that was stripping new line characters by introducing TextAreaWorkaround class.

5.0.8.1 (Dec 27, 2010)
----------------------
- Fix bug that was causing error on save of Analysis when file registered in the db but not found on the file system.
- Fix bug that was preventing 'clear all' Analysis files from working.
- When file registered in db but not on file system, just show 0 bytes instead of post-fixing (FILE NOT FOUND) to name.
- Analysis file upload is in a popup window rather than embedded in the Edit window’s file tab.
- Fix bug introduced in 5.0.8 that was causing $0 estimated price on QC bionanalyzer requests.
- Introduce import Sample Spreadsheet feature (Thanks Robb!)


5.0.8 (Dec 20, 2010)
---------------------
- Compile with Flex 3.5 SDK, provide instructions for building with Flash Builder 4
- Handle case where experiment, analysis, flowcell directory properties don't end with file separator
- Account for Windows 7 // in File.getCanonicalPath()
- Account for case differences in experiment directory and file name
- Make dictionary editor work with flex sdk 3.5 compile (setData has to occur after component added)
- Clean up home page 
- Fix QuBit PicoGreen billing
- Add QC experiment sample type, sample names to searchable index 
- Double-click on Analysis search results brings up Analysis detail.
- Make search a popup window rather than a full pane.
- Moved gnomex_db_ddl.sql, gnomex_db_populate.sql to directory sql.
- Created upgrade sql script


5.0.7.1 (Dec 7, 2010)
---------------------
- Make 'Add Services' window dictionary-driven from experiment category
- Omit external experiments from list of experiments listed for 'Add Services'

5.0.7 (Dec 6, 2010)
---------------------
- Make experiment category on Submit Request window dictionary driven
- Add field icon, type to RequestCategory dictionary
- Centralize code for getting tree icons